# solana-security-hackathon

./: .env.example  .gitignore  Anchor.toml  BENCHMARKS.md  BENCHMARK_COLLECTION_GUIDE.md  CODE_VERIFICATION_REPORT.md  COMPLETE_PROJECT_DOCUMENTATION_PART_1.md  COMPLETE_PROJECT_DOCUMENTATION_PART_2.md  Cargo.toml  DOCUMENTATION_10_OUT_OF_10_ACHIEVEMENT.md  DOCUMENTATION_CLEANUP_SUMMARY.md  DOCUMENTATION_COMPLETION_REPORT.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_UPDATES_P2_TO_P8.md  FINAL_DOCUMENTATION_IMPROVEMENTS.md  IMPLEMENTATION_SUMMARY.md  ISSUE_RESOLUTION_CONFIRMED.md  P2_TO_P8_COMPLETION_SUMMARY.md  PART0_EXECUTIVE_SUMMARY.md  PART3_CRATE_CATALOGUE.md  README.md  analyze_warnings.sh  analyzer.example.toml  demo_ui.sh  deployed_programs.json  package-lock.json  package.json  run_benchmarks.py  sanitize_test_targets.sh  swarm  test_kimi_api.sh  tsconfig.json  verify_exit_codes.sh  warnings.txt
audit_reports/: 0-signer-authorization_report.json  1-account-data-matching_report.json  10-sysvar-address-checking_report.json  2-owner-checks_report.json  3-type-cosplay_report.json  4-initialization_report.json  5-arbitrary-cpi_report.json  6-duplicate-mutable-accounts_report.json  7-bump-seed-canonicalization_report.json  8-pda-sharing_report.json  9-closing-accounts_report.json  audit_report.json  (+12 more)
crates/abstract-interpreter/: Cargo.toml
crates/abstract-interpreter/benches/: interpreter_benchmark.rs
crates/abstract-interpreter/src/: domains.rs  lib.rs  transfer.rs
crates/ai-enhancer/: Cargo.toml
crates/ai-enhancer/src/: lib.rs
crates/anchor-security-analyzer/: Cargo.toml
crates/anchor-security-analyzer/src/: constraint_validator.rs  cpi_guard_detector.rs  lib.rs  metrics.rs  pda_validator.rs  report.rs  signer_checker.rs  token_hook_analyzer.rs
crates/arithmetic-security-expert/: Cargo.toml
crates/arithmetic-security-expert/src/: lib.rs
crates/attack-simulator/: Cargo.toml
crates/attack-simulator/src/: lib.rs
crates/certora-prover/: Cargo.toml
crates/certora-prover/src/: bytecode_patterns.rs  certora_runner.rs  config_builder.rs  lib.rs  result_parser.rs  sbf_analyzer.rs  spec_generator.rs
crates/consensus-engine/: Cargo.toml
crates/consensus-engine/src/: lib.rs
crates/cpi-analyzer/: Cargo.toml
crates/cpi-analyzer/src/: enhanced.rs  lib.rs
crates/firedancer-monitor/: Cargo.toml
crates/firedancer-monitor/src/: latency_monitor.rs  lib.rs  report.rs  skip_vote_detector.rs  stress_analyzer.rs  verification_lag.rs
crates/fuzzdelsol/: Cargo.toml
crates/fuzzdelsol/src/: bytecode_parser.rs  fuzz_engine.rs  lib.rs  oracles.rs  report.rs
crates/geiger-analyzer/: Cargo.toml
crates/geiger-analyzer/src/: ffi_analyzer.rs  lib.rs  metrics.rs  pointer_analyzer.rs  report.rs  transmute_detector.rs  unsafe_detector.rs
crates/integration-orchestrator/: Cargo.toml
crates/integration-orchestrator/src/: lib.rs
crates/kani-verifier/: Cargo.toml
crates/kani-verifier/src/: harness_generator.rs  invariant_extractor.rs  kani_runner.rs  lib.rs  result_parser.rs  solana_invariants.rs
crates/l3x-analyzer/: Cargo.toml
crates/l3x-analyzer/src/: anomaly_detector.rs  code_embeddings.rs  control_flow_gnn.rs  ensemble.rs  lib.rs  pattern_learner.rs  report.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: access_control.rs  account_validator.rs  advanced_analysis.rs  audit_pipeline.rs  chain_explorer.rs  comprehensive_analysis.rs  dashboard.rs  enhanced_comprehensive.rs  flash_loan_detector.rs  flash_loan_enhanced.rs  idl_fetcher.rs  lib.rs  main.rs  mainnet_guardian.rs  markdown_engine.rs  mitigation_engine.rs  on_chain_registry.rs  oracle_analyzer.rs  oracle_enhanced.rs  pda_analyzer.rs  pdf_report.rs  privilege_escalation.rs  reentrancy_detector.rs  strategy_engine.rs  terminal_ui.rs  watcher.rs
crates/program-analyzer/: Cargo.toml
crates/program-analyzer/benches/: analysis_benchmark.rs
crates/program-analyzer/src/: anchor_extractor.rs  ast_parser.rs  config.rs  idl_loader.rs  lib.rs  metrics.rs  report_generator.rs  security.rs  traits.rs  vulnerability_db.rs
crates/program-analyzer/tests/: false_positives.rs  integration.rs  property_tests.rs
crates/sec3-analyzer/: Cargo.toml
crates/sec3-analyzer/src/: account_confusion.rs  close_account.rs  cpi_guard.rs  duplicate_accounts.rs  integer_analyzer.rs  lib.rs  ownership_checker.rs  pda_validator.rs  remaining_accounts.rs  report.rs  signer_checker.rs  utils.rs
crates/security-fuzzer/: Cargo.toml
crates/security-fuzzer/benches/: fuzzer_benchmark.rs
crates/security-fuzzer/src/: lib.rs
crates/taint-analyzer/: Cargo.toml
crates/taint-analyzer/src/: advanced.rs  lib.rs  propagation.rs  sinks.rs  sources.rs
crates/transaction-forge/: Cargo.toml
crates/transaction-forge/src/: builder.rs  error.rs  executor.rs  lib.rs  proof_generator.rs
crates/transaction-forge/templates/: rust_poc.tera  typescript_poc.tera
crates/trident-fuzzer/: Cargo.toml
crates/trident-fuzzer/src/: anchor_extractor.rs  crash_analyzer.rs  fuzz_executor.rs  harness_generator.rs  lib.rs  report.rs
crates/wacana-analyzer/: Cargo.toml
crates/wacana-analyzer/src/: concolic_engine.rs  constraint_collector.rs  lib.rs  report.rs  sbf_decoder.rs  vulnerability_detectors.rs  wasm_parser.rs
programs/security_shield/: Cargo.toml
programs/security_shield/src/: auto_response.rs  compute_guard.rs  lib.rs  secure_vault_mod.rs
programs/vulnerable-staking/: Cargo.toml
programs/vulnerable-staking/src/: emergency_systems_mod.rs  lib.rs  rent_guard.rs  secure_oracle_mod.rs  secure_vault_mod.rs  token_extensions_mod.rs
programs/vulnerable-token/: Cargo.toml
programs/vulnerable-token/src/: emergency_admin_override.rs  emergency_systems_mod.rs  flash_loan_defense_mod.rs  lib.rs  mev_defense_mod.rs  pda_utils.rs  rent_guard.rs  secure_oracle_mod.rs  secure_time.rs  token_extensions_mod.rs
programs/vulnerable-vault/: Cargo.toml
programs/vulnerable-vault/src/: auto_response.rs  compute_guard.rs  flash_loan_defense_mod.rs  lib.rs  mev_defense_mod.rs  pda_utils.rs  secure_time.rs  secure_vault_mod.rs
(+89 files in other folders)
