[package]
name = "ai-enhancer"
version.workspace = true
edition.workspace = true

[dependencies]
program-analyzer = { path = "../program-analyzer" }
serde.workspace = true
serde_json.workspace = true
reqwest = { workspace = true, features = ["json"] }
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
futures-util = "0.3"