[package]
name = "firedancer-monitor"
version.workspace = true
edition.workspace = true
description = "Firedancer-aware validator performance and risk monitoring for Solana"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
anyhow = "1.0"
chrono = "0.4"
solana-client = "1.18"
solana-sdk = "1.18"
solana-rpc-client-api = "1.18"
hex = "0.4"
sha2 = "0.10"
