[package]
name = "fuzzdelsol"
version.workspace = true
edition.workspace = true

[dependencies]
# Solana eBPF bytecode parsing
solana_rbpf = "0.8"
solana-sdk.workspace = true

# Binary analysis
object = "0.36"
goblin = "0.8"

# Fuzzing engine
arbitrary = { version = "1.3", features = ["derive"] }
libfuzzer-sys = "0.4"

# Coverage tracking
coverage-helper = "0.2"

# Utilities
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
sha2.workspace = true
hex = "0.4"

# Bytecode execution
rand = "0.8"
