[package]
name = "geiger-analyzer"
version.workspace = true
edition.workspace = true
description = "Cargo-geiger integration for detecting unsafe Rust blocks in Solana programs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits", "visit"] }
quote = "1.0"
proc-macro2 = "1.0"
walkdir = "2.4"
regex = "1.10"
tracing = "0.1"
anyhow = "1.0"
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"
toml = "0.8"
