[package]
name = "kani-verifier"
version.workspace = true
edition.workspace = true
description = "Kani Rust Verifier integration for bit-precise model checking of Solana programs"
license = "MIT"
keywords = ["kani", "solana", "formal-verification", "model-checking", "cbmc"]
categories = ["development-tools", "cryptography"]

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits", "visit", "parsing"] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
walkdir = "2.4"
tracing = "0.1"
chrono = "0.4"
regex = "1.10"
tempfile = "3.10"
