[package]
name = "l3x-analyzer"
version.workspace = true
edition.workspace = true
description = "L3X AI-driven static analyzer for Solana smart contracts — ML-powered vulnerability detection"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits", "visit"] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
walkdir = "2.4"
sha2 = "0.10"
hex = "0.4"
regex = "1.10"
tracing = "0.1"
anyhow = "1.0"
petgraph = "0.6"  # Graph analysis for control flow
ndarray = "0.15"  # Numerical arrays for ML
rayon = "1.8"     # Parallel processing
bincode = "1.3"   # Binary serialization for model weights
chrono = "0.4"    # Timestamp generation
