[package]
name = "program-analyzer"
version = "0.2.0"
edition = "2021"
description = "AST-based security vulnerability analyzer for Solana/Anchor programs"
license = "MIT"
repository = "https://github.com/example/solana-security-platform"
keywords = ["solana", "security", "audit", "anchor", "vulnerability"]
categories = ["development-tools", "cryptography"]

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
walkdir = "2.4"
colored = "2.0"
thiserror = "1.0"
toml = "0.8"
rayon = "1.8"
zeroize = { version = "1.3", features = ["zeroize_derive"] }
once_cell = "1.19"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "analysis_benchmark"
harness = false