[package]
name = "sec3-analyzer"
version.workspace = true
edition.workspace = true
description = "Sec3 (formerly Soteria) advanced static analysis — deep AST-level vulnerability detection for Solana Anchor programs covering owner checks, integer safety, account confusion, CPI guards, PDA validation, and close-account drains"
license = "MIT"
keywords = ["solana", "soteria", "sec3", "security", "static-analysis"]
categories = ["development-tools", "cryptography"]

[dependencies]
# Rust AST parsing (deep source-level analysis)
syn = { version = "2.0", features = ["full", "extra-traits", "visit", "parsing"] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Hashing & fingerprinting
sha2 = "0.10"
hex = "0.4"

# Filesystem traversal
walkdir = "2.4"

# Utilities
thiserror = "1.0"
tracing = "0.1"
chrono = "0.4"
regex = "1.10"
