[package]
name = "security-fuzzer"
version.workspace = true
edition.workspace = true

[dependencies]
program-analyzer = { path = "../program-analyzer" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
sha2 = "0.10"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "fuzzer_benchmark"
harness = false