[package]
name = "taint-analyzer"
version.workspace = true
edition.workspace = true

[dependencies]
program-analyzer = { path = "../program-analyzer" }
syn = { version = "2.0", features = ["full", "extra-traits", "visit"] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
petgraph = "0.6"
thiserror = "1.0"
walkdir = "2.4"
tracing = "0.1"