[package]
name = "trident-fuzzer"
version.workspace = true
edition.workspace = true
description = "Trident (Ackee Blockchain) integration — high-end stateful fuzzing for Solana programs with full ledger simulation"
license = "MIT"
keywords = ["solana", "fuzzing", "trident", "anchor", "security"]
categories = ["development-tools", "cryptography"]

[dependencies]
# Rust AST parsing (extract Anchor accounts/instructions)
syn = { version = "2.0", features = ["full", "extra-traits", "visit", "parsing"] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Hashing & fingerprinting
sha2 = "0.10"
hex = "0.4"

# RNG for input generation
rand = "0.8"

# Utilities
thiserror = "1.0"
tracing = "0.1"
chrono = "0.4"
walkdir = "2.4"
toml = "0.8"
regex = "1.10"
