[package]
name = "security-shield"
version = "0.1.0"
edition = "2021"

[package.metadata.solana]
program-id = "9N8t8PJSZeR9ZLH1Fk7wEKkTxXfQqzz4jtgjwrKKKnNH"

[lib]
crate-type = ["cdylib", "lib"]
name = "security_shield"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
anchor-debug = []
pyth-sdk = []
switchboard = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
# Oracle dependencies commented out due to version conflicts
# Will use placeholder implementations for devnet testing
# pyth-sdk-solana = "0.10.0"
# switchboard-v2 = "0.4.0"